ensure vertical pics arent too tall

--- a/css/hack.css
+++ b/css/hack.css
@@ -344,6 +344,7 @@ p {
 }
 .container img {
     max-width: 90%;
+    max-height: 400px;
     height: auto;
     margin-left: 5%;
 }
